--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,9 +31,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
+                <Button
+                    android:id="@+id/modifyCacheModel"
+                    android:text="修改缓存模式"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
             </LinearLayout>
 
-
+            <TextView
+                android:text="缓存模式说明：\n  0：不使用缓存\n  1: 只有当网络数据失败时使用缓存\n  2: 优先使用缓存: 本地有缓存且未过期则用缓存 -> 过期则使用网络数据 -> 网络失败使用过期数据\n  3:使用缓存，但不使用过期数据"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
             <LinearLayout
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
