--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,35 +14,41 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <LinearLayout
+            <HorizontalScrollView
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <Button
-                    android:id="@+id/removeCacheBtn"
-                    android:text="清除缓存"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    <Button
+                        android:id="@+id/removeCacheBtn"
+                        android:text="清除缓存"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
-                <Button
-                    android:id="@+id/reloadData"
-                    android:text="重新加载数据"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    <Button
+                        android:id="@+id/reloadData"
+                        android:text="重新加载数据"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
-                <Button
-                    android:id="@+id/modifyCacheModel"
-                    android:text="修改缓存模式"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <Button
-                    android:id="@+id/listActivity"
-                    android:text="列表页面"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    <Button
+                        android:id="@+id/modifyCacheModel"
+                        android:text="修改缓存模式"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <Button
+                        android:id="@+id/listActivity"
+                        android:text="列表页面"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
-            </LinearLayout>
+                </LinearLayout>
+            </HorizontalScrollView>
+
 
             <TextView
                 android:text="缓存模式说明：\n  0：不使用缓存\n  1: 只有当网络数据失败时使用缓存\n  2: 优先使用缓存: 本地有缓存且未过期则用缓存 -> 过期则使用网络数据 -> 网络失败使用过期数据\n  3:使用缓存，但不使用过期数据"
