--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,11 @@
                 android:text="列表页面"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-
+            <Button
+                android:id="@+id/viewModelActivity"
+                android:text="ViewModel 页面"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </HorizontalScrollView>
 
