--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".listdemo.ListActivity">
+    tools:context=".normallist.NormalListActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
