[update] Demo 优化

--- a/app/src/main/res/layout/view_model_data_item_style0.xml
+++ b/app/src/main/res/layout/view_model_data_item_style0.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+
+    <com.example.providermoduledemo.viewmodel.ItemTitleView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:orientation="vertical"
         android:background="#FF0"
