--- a/app/src/main/res/layout/view_model_item_title.xml
+++ b/app/src/main/res/layout/view_model_item_title.xml
@@ -5,14 +5,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/itemTitle"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textSize="15dp"
+        android:textSize="20dp"
         android:textColor="#000"
-        android:text="单书 View"
+        android:text="标题 View"
         android:padding="10dp"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text=">"
+        android:padding="10dp"
+        android:textSize="20dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
