--- a/app/src/main/res/layout/view_model_data_item_style1.xml
+++ b/app/src/main/res/layout/view_model_data_item_style1.xml
@@ -7,31 +7,31 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <com.example.providermoduledemo.viewmodel.ItemTitleView
+    <com.example.providermoduledemo.viewmodel.TitleView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="90dp">
         <LinearLayout
             android:orientation="horizontal"
-            android:background="#0FF"
+            android:background="#841100FF"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <com.example.providermoduledemo.viewmodel.SingleBookView
+            android:layout_height="match_parent">
+            <com.example.providermoduledemo.viewmodel.LIRTView
                 android:id="@+id/singleBook0"
                 android:layout_width="150dp"
-                android:layout_height="100dp" />
-            <com.example.providermoduledemo.viewmodel.SingleBookView
+                android:layout_height="match_parent" />
+            <com.example.providermoduledemo.viewmodel.LIRTView
                 android:id="@+id/singleBook1"
                 android:layout_width="150dp"
-                android:layout_height="100dp" />
-            <com.example.providermoduledemo.viewmodel.SingleBookView
+                android:layout_height="match_parent" />
+            <com.example.providermoduledemo.viewmodel.LIRTView
                 android:id="@+id/singleBook2"
                 android:layout_width="150dp"
-                android:layout_height="100dp" />
+                android:layout_height="match_parent" />
         </LinearLayout>
     </HorizontalScrollView>
 
