--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,16 +18,16 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <Button
-                android:id="@+id/viewModelActivity"
-                android:text="ViewModel 页面"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <Button
-                android:id="@+id/preLoadActivity"
-                android:text="预加载测试页面"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+<!--            <Button-->
+<!--                android:id="@+id/viewModelActivity"-->
+<!--                android:text="ViewModel 页面"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"/>-->
+<!--            <Button-->
+<!--                android:id="@+id/preLoadActivity"-->
+<!--                android:text="预加载测试页面"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"/>-->
 
             <Button
                 android:id="@+id/sampleListPageActivity"
