--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,13 @@
                 android:text="女生二级页"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+
+
+            <Button
+                android:id="@+id/fragmentCommonSecondPageFragment"
+                android:text="Fragment 二级页"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </ScrollView>
 
