--- a/QRBusinessBasic/src/main/res/layout/common_titler.xml
+++ b/QRBusinessBasic/src/main/res/layout/common_titler.xml
@@ -7,7 +7,7 @@
     <!--android:background="@drawable/common_title_bar_bg_shape"-->
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="48dp">
 
         <ImageView
             android:id="@+id/profile_header_left_back"
@@ -31,7 +31,8 @@
                 android:layout_centerInParent="true"
                 android:gravity="center"
                 android:textColor="#000"
-                android:textSize="10dp"
+                android:textStyle="bold"
+                android:textSize="18dp"
                 tools:text="test" />
 
             <ImageView
