--- a/QRBusinessBasic/src/main/res/layout/common_titler.xml
+++ b/QRBusinessBasic/src/main/res/layout/common_titler.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/common_titler"
+    android:paddingTop="20dp"
     android:layout_width="fill_parent" android:layout_height="wrap_content">
     <!--android:background="@drawable/common_title_bar_bg_shape"-->
     <RelativeLayout
