修改一些内容，使其更容易使用

--- a/QRBookStore/src/main/res/layout/localstore_loading_failed.xml
+++ b/QRBookStore/src/main/res/layout/localstore_loading_failed.xml
@@ -4,5 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:empty="http://schemas.android.com/apk/res-auto"
     android:text="加载失败"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
