--- a/QRBookStore/src/main/res/layout/localstore_loading.xml
+++ b/QRBookStore/src/main/res/layout/localstore_loading.xml
@@ -9,6 +9,7 @@
 
     <ProgressBar
         android:id="@+id/default_progress"
+        style="@android:style/Widget.Material.ProgressBar"
         android:layout_centerHorizontal="true"
         android:visibility="visible"
         android:layout_height="50dp"
