添加过场动画

--- a/Sample_WB/src/main/res/layout/activity_main.xml
+++ b/Sample_WB/src/main/res/layout/activity_main.xml
@@ -4,6 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".SplashActivity">
+
+
+    <ImageView
+        android:id="@+id/img"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:transitionName="weibo"
+        android:src="@drawable/sina_weibo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        app:layout_constraintTop_toBottomOf="@+id/img"
+        android:gravity="center"
+        android:text="欢迎使用微博热搜"
+        android:layout_marginTop="10dp"
+        android:textColor="#7D7D7D"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
