--- a/Sample_WB/src/main/res/layout/wb_titler.xml
+++ b/Sample_WB/src/main/res/layout/wb_titler.xml
@@ -11,9 +11,12 @@
         android:layout_height="48dp">
 
         <ImageView
-            android:id="@+id/profile_header_left_back"
+            android:id="@+id/leftImage"
             android:layout_width="44dp"
             android:layout_height="44dp"
+            android:transitionName="weibo"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/sina_weibo"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:scaleType="centerInside"/>
@@ -49,51 +52,10 @@
                 android:visibility="gone" />
         </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
 
-        </LinearLayout>
 
-        <Button
-            android:id="@+id/profile_header_right_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:paddingLeft="14dp"
-            android:paddingRight="14dp"
-            android:visibility="gone" />
 
-        <Button
-            android:id="@+id/profile_header_right_button2"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/profile_header_right_button"
-            android:gravity="center"
-            android:text="开始"
-            android:visibility="gone" />
 
-        <View
-            android:id="@+id/title_bar_line"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:visibility="gone"/>
-
-        <ViewStub
-            android:id="@+id/right_icon_stub"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:inflatedId="@+id/right_icon_inflated"
-            android:visibility="gone" />
     </RelativeLayout>
 
 </RelativeLayout>
