--- a/Sample_WB/src/main/res/layout/wb_titler.xml
+++ b/Sample_WB/src/main/res/layout/wb_titler.xml
@@ -14,7 +14,7 @@
             android:id="@+id/leftImage"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            android:transitionName="weibo"
+            android:transitionName="anim_weibo_img"
             android:layout_marginStart="10dp"
             android:src="@drawable/sina_weibo"
             android:layout_alignParentLeft="true"
@@ -33,6 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:transitionName="anim_weibo_item"
                 android:gravity="center"
                 android:textColor="#000"
                 android:textStyle="bold"
