--- a/Sample_WB/src/main/res/layout/activity_main.xml
+++ b/Sample_WB/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:transitionName="weibo"
+        android:transitionName="anim_weibo_img"
         android:src="@drawable/sina_weibo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
