--- a/Sample_WB/src/main/res/layout/activity_web.xml
+++ b/Sample_WB/src/main/res/layout/activity_web.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <include
         android:id="@+id/common_titler"
-        layout="@layout/common_titler"
+        layout="@layout/wb_titler"
         android:visibility="visible" />
     <WebView
         android:id="@+id/webView"
