--- a/Sample_WB/src/main/res/layout/activity_main.xml
+++ b/Sample_WB/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF"
     tools:context=".SplashActivity">
 
 
@@ -14,11 +15,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:transitionName="anim_weibo_img"
-        android:src="@drawable/sina_weibo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:src="@drawable/ic_launch"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
 
     <TextView
+        android:id="@+id/text"
         app:layout_constraintTop_toBottomOf="@+id/img"
         android:gravity="center"
         android:text="欢迎使用微博热搜"
