--- a/Sample_WB/src/main/res/values/colors.xml
+++ b/Sample_WB/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <!--http://tool.c7sky.com/webcolor/#character_0-->
+    <color name="colorPrimary">#666699</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
+    <color name="colorAccent">#FF9999</color>
+
+    <color name="item_title">#5E5E5E</color>
+    <color name="item_tag">#FF216C</color>
 </resources>
