--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:background="#FFF"
+    tools:context=".SplashActivity">
 
-    <ScrollView
-        android:id="@+id/hor_scroll_view"
+
+    <ImageView
+        android:id="@+id/img"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:transitionName="anim_weibo_img"
+        android:src="@drawable/ic_launch"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
+
+    <TextView
+        android:id="@+id/text"
+        app:layout_constraintTop_toBottomOf="@+id/img"
+        android:gravity="center"
+        android:text="只给你想要的热搜"
+        android:layout_marginTop="10dp"
+        android:textColor="#7D7D7D"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-<!--            <Button-->
-<!--                android:id="@+id/sampleListPageActivity"-->
-<!--                android:text="通用列表页面"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"/>-->
-<!--            <Button-->
-<!--                android:id="@+id/boyCommonSecondPage"-->
-<!--                android:text="男生二级页"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"/>-->
-<!--            <Button-->
-<!--                android:id="@+id/girlCommonSecondPage"-->
-<!--                android:text="女生二级页"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"/>-->
+        android:layout_height="wrap_content"/>
 
 
-            <Button
-                android:id="@+id/fragmentCommonSecondPageFragment"
-                android:text="Fragment 二级页"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </ScrollView>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:padding="10dp"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:text="缓存模式介绍："
-                android:layout_marginTop="10dp"
-                android:textColor="#000"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:text="缓存模式说明：\n  0：不使用缓存\n  1: 只有当网络数据失败时使用缓存\n  2: 优先使用缓存: 本地有缓存且未过期则用缓存 -> 过期则使用网络数据 -> 网络失败使用过期数据\n  3:使用缓存，但不使用过期数据"
-                android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-
-    </ScrollView>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
