--- a/QRBookStore/src/main/res/values/styles.xml
+++ b/QRBookStore/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- TODO: 强烈建议, 将下面主题移至 QRBusinessBasic -->
+    <!-- TODO: 强烈建议, 将下面主题移至 BusinessBasic -->
 
     <!--如果需要滑动返回功能，要继承此theme-->
     <style name="AppTranslucentTheme" parent="android:Theme">
