--- a/app/src/main/res/layout/wb_titler.xml
+++ b/app/src/main/res/layout/wb_titler.xml
@@ -21,11 +21,30 @@
             android:layout_centerVertical="true"
             android:scaleType="centerInside"/>
 
+        <TextView
+            android:id="@+id/title_right_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:transitionName="anim_weibo_item"
+            android:layout_alignParentEnd="true"
+            android:textColor="@color/text_color_3"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_2"
+            android:layout_marginBottom="2dp"
+            android:layout_marginEnd="10dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:maxLines="1"
+            android:ellipsize="end"
+            tools:text="12:09" />
+
         <RelativeLayout
             android:id="@+id/ll_profile_header_title"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
+            android:layout_toStartOf="@id/title_right_time"
             android:layout_toEndOf="@id/leftImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,21 +62,10 @@
                 android:textSize="18dp"
                 android:maxLines="1"
                 android:ellipsize="end"
-                tools:text="哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈" />
+                tools:text="哈哈哈哈" />
 
-            <ImageView
-                android:id="@+id/profile_header_title_sort"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/profile_header_title"
-                android:contentDescription="@null"
-                android:paddingLeft="6dp"
-                android:paddingRight="5dp"
-                android:scaleType="fitCenter"
-                android:visibility="gone" />
+
         </RelativeLayout>
-
 
 
 
