--- a/app/src/main/res/layout/layout_float_button.xml
+++ b/app/src/main/res/layout/layout_float_button.xml
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:src="@drawable/ic_switch_24px"
+        android:src="@drawable/ic_add_24px"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="20dp"
         app:fabSize="normal"
