--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
-    tools:context="com.lulu.hotsearch.SplashActivity">
+    tools:context="com.lulu.hotsearch.activity.SplashActivity">
 
 
     <ImageView
