--- a/app/src/main/res/layout/wb_titler.xml
+++ b/app/src/main/res/layout/wb_titler.xml
@@ -67,7 +67,18 @@
 
         </RelativeLayout>
 
-
+        <ImageView
+            android:id="@+id/rightImage"
+            tools:visibility="visible"
+            android:visibility="gone"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:src="@drawable/ic_close_24px"
+            android:tintMode="src_in"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:scaleType="centerInside"
+            app:tint="#000000" />
 
 
     </RelativeLayout>
