--- a/app/src/main/res/layout/wb_titler.xml
+++ b/app/src/main/res/layout/wb_titler.xml
@@ -75,6 +75,7 @@
             android:layout_height="44dp"
             android:src="@drawable/ic_close_24px"
             android:tintMode="src_in"
+            android:background="#FFFFFFFF"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:scaleType="centerInside"
