--- a/app/src/main/res/layout/layout_float_button.xml
+++ b/app/src/main/res/layout/layout_float_button.xml
@@ -5,107 +5,15 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout
-        android:id="@+id/rlAddBill"
+        android:id="@+id/llFloatContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom"
         android:background="#80000000"
+        android:paddingBottom="100dp"
         android:orientation="vertical"
-        android:visibility="gone"
-        tools:visibility="visible"
-        >
-        <LinearLayout
-            android:id="@+id/ll03"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal"
-            >
-            <TextView
-                android:layout_toLeftOf="@id/miniFab03"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="知乎热搜"
-                android:textSize="15sp"
-                android:textColor="@android:color/white"
-                android:layout_gravity="center_vertical"
-                android:gravity="right"
-                android:layout_marginEnd="5dp"
-                />
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/miniFab03"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/zhihu"
-                android:layout_marginRight="25dp"
-                app:fabSize="mini"
-                app:elevation="5dp"
-                app:backgroundTint="#FFF"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll02"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal"
-            >
-            <TextView
-                android:layout_toLeftOf="@id/miniFab02"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="抖音热搜"
-                android:textSize="15sp"
-                android:textColor="@android:color/white"
-                android:layout_gravity="center_vertical"
-                android:gravity="right"
-                android:layout_marginEnd="5dp"
-                />
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/miniFab02"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/douyin"
-                android:layout_marginRight="25dp"
-                app:fabSize="mini"
-                app:elevation="5dp"
-                app:backgroundTint="#FFF"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll01"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="100dp"
-            android:orientation="horizontal"
-            >
-            <TextView
-                android:layout_toLeftOf="@id/miniFab01"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="微博热搜"
-                android:textSize="15sp"
-                android:textColor="@android:color/white"
-                android:layout_gravity="center_vertical"
-                android:gravity="right"
-                android:layout_marginEnd="5dp"
-                />
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/miniFab01"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/sina_wb"
-                android:layout_marginRight="25dp"
-                app:fabSize="mini"
-                app:elevation="5dp"
-                app:backgroundTint="#FFF"/>
-        </LinearLayout>
-
-    </LinearLayout>
+        android:visibility="visible"
+        tools:visibility="visible"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabRoot"
         android:layout_width="wrap_content"
